// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders a modal with a tagline 1`] = `
Array [
  <section
    aria-describedby="modal-content-id-1"
    aria-labelledby="modal-heading-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <header
        className="slds-modal__header"
      >
        <button
          className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
          onClick={[Function]}
          title="Close"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon slds-button__icon_large"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close
          </span>
        </button>
        <h2
          className="slds-modal__title slds-hyphenate"
          id="modal-heading-01"
        >
          Modal header
        </h2>
        <p
          className="slds-m-top_x-small"
        >
          Here’s a tagline if you need it. It is allowed to extend across mulitple lines, so I’m making up content to show that to you. It is allowed to
           
          <a
            href="javascript:void(0);"
          >
            contain links or be a link
          </a>
          .
        </p>
      </header>
      <div
        className="slds-modal__content slds-p-around_medium"
        id="modal-content-id-1"
      >
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi. Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis. Cillum sunt ad dolore quis aute consequat ipsum magna exercitation reprehenderit magna. Tempor cupidatat consequat elit dolor adipisicing.
        </p>
        <p>
          Dolor eiusmod sunt ex incididunt cillum quis nostrud velit duis sit officia. Lorem aliqua enim laboris do dolor eiusmod officia. Mollit incididunt nisi consectetur esse laborum eiusmod pariatur proident. Eiusmod et adipisicing culpa deserunt nostrud ad veniam nulla aute est. Labore esse esse cupidatat amet velit id elit consequat minim ullamco mollit enim excepteur ea.
        </p>
      </div>
      <footer
        className="slds-modal__footer"
      >
        <button
          className="slds-button slds-button_neutral"
        >
          Cancel
        </button>
        <button
          className="slds-button slds-button_brand"
        >
          Save
        </button>
      </footer>
    </div>
  </section>,
  <div
    className="slds-backdrop slds-backdrop_open"
  />,
]
`;

exports[`Modal renders a model that is Footless 1`] = `
Array [
  <section
    aria-describedby="modal-content-id-1"
    aria-labelledby="modal-heading-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <header
        className="slds-modal__header"
      >
        <button
          className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
          onClick={[Function]}
          title="Close"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon slds-button__icon_large"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close
          </span>
        </button>
        <h2
          className="slds-modal__title slds-hyphenate"
          id="modal-heading-01"
        >
          Modal header
        </h2>
      </header>
      <div
        className="slds-modal__content slds-p-around_medium"
        id="modal-content-id-1"
      >
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi. Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis. Cillum sunt ad dolore quis aute consequat ipsum magna exercitation reprehenderit magna. Tempor cupidatat consequat elit dolor adipisicing.
        </p>
        <p>
          Dolor eiusmod sunt ex incididunt cillum quis nostrud velit duis sit officia. Lorem aliqua enim laboris do dolor eiusmod officia. Mollit incididunt nisi consectetur esse laborum eiusmod pariatur proident. Eiusmod et adipisicing culpa deserunt nostrud ad veniam nulla aute est. Labore esse esse cupidatat amet velit id elit consequat minim ullamco mollit enim excepteur ea.
        </p>
      </div>
    </div>
  </section>,
  <div
    className="slds-backdrop slds-backdrop_open"
  />,
]
`;

exports[`Modal renders a model that is contains a menu 1`] = `
Array [
  <section
    aria-describedby="modal-content-unique-id-2"
    aria-labelledby="modal-heading-unique-id-1"
    aria-modal="true"
    className="slds-modal slds-fade-in-open"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <header
        className="slds-modal__header"
      >
        <button
          className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
          onClick={[Function]}
          title="Close"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon slds-button__icon_large"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close
          </span>
        </button>
        <h2
          className="slds-modal__title slds-hyphenate"
          id="modal-heading-unique-id-1"
        >
          Modal header
        </h2>
      </header>
      <div
        className="slds-modal__menu"
        id="modal-content-unique-id-2"
      >
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi. Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis. Cillum sunt ad dolore quis aute consequat ipsum magna exercitation reprehenderit magna. Tempor cupidatat consequat elit dolor adipisicing.
        </p>
        <p>
          Dolor eiusmod sunt ex incididunt cillum quis nostrud velit duis sit officia. Lorem aliqua enim laboris do dolor eiusmod officia. Mollit incididunt nisi consectetur esse laborum eiusmod pariatur proident. Eiusmod et adipisicing culpa deserunt nostrud ad veniam nulla aute est. Labore esse esse cupidatat amet velit id elit consequat minim ullamco mollit enim excepteur ea.
        </p>
      </div>
      <footer
        className="slds-modal__footer slds-hide"
      />
    </div>
  </section>,
  <div
    className="slds-backdrop slds-backdrop_open"
  />,
]
`;

exports[`Modal renders a model that is directional 1`] = `
Array [
  <section
    aria-describedby="modal-content-id-1"
    aria-labelledby="modal-heading-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <header
        className="slds-modal__header"
      >
        <button
          className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
          onClick={[Function]}
          title="Close"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon slds-button__icon_large"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close
          </span>
        </button>
        <h2
          className="slds-modal__title slds-hyphenate"
          id="modal-heading-01"
        >
          Modal header
        </h2>
      </header>
      <div
        className="slds-modal__content slds-p-around_medium"
        id="modal-content-id-1"
      >
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi. Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis. Cillum sunt ad dolore quis aute consequat ipsum magna exercitation reprehenderit magna. Tempor cupidatat consequat elit dolor adipisicing.
        </p>
        <p>
          Dolor eiusmod sunt ex incididunt cillum quis nostrud velit duis sit officia. Lorem aliqua enim laboris do dolor eiusmod officia. Mollit incididunt nisi consectetur esse laborum eiusmod pariatur proident. Eiusmod et adipisicing culpa deserunt nostrud ad veniam nulla aute est. Labore esse esse cupidatat amet velit id elit consequat minim ullamco mollit enim excepteur ea.
        </p>
      </div>
      <footer
        className="slds-modal__footer slds-modal__footer_directional"
      >
        <button
          className="slds-button slds-button_neutral"
        >
          Skip This Step
        </button>
        <button
          className="slds-button slds-button_brand"
        >
          Save & Next
        </button>
      </footer>
    </div>
  </section>,
  <div
    className="slds-backdrop slds-backdrop_open"
  />,
]
`;

exports[`Modal renders a model that is has a hidden footer 1`] = `
Array [
  <section
    aria-describedby="modal-content-id-1"
    aria-labelledby="modal-heading-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <header
        className="slds-modal__header"
      >
        <button
          className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
          onClick={[Function]}
          title="Close"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon slds-button__icon_large"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close
          </span>
        </button>
        <h2
          className="slds-modal__title slds-hyphenate"
          id="modal-heading-01"
        >
          Modal header
        </h2>
      </header>
      <div
        className="slds-modal__content slds-modal__content_has-hidden-footer slds-p-around_medium"
        id="modal-content-id-1"
      >
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi. Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis. Cillum sunt ad dolore quis aute consequat ipsum magna exercitation reprehenderit magna. Tempor cupidatat consequat elit dolor adipisicing.
        </p>
        <p>
          Dolor eiusmod sunt ex incididunt cillum quis nostrud velit duis sit officia. Lorem aliqua enim laboris do dolor eiusmod officia. Mollit incididunt nisi consectetur esse laborum eiusmod pariatur proident. Eiusmod et adipisicing culpa deserunt nostrud ad veniam nulla aute est. Labore esse esse cupidatat amet velit id elit consequat minim ullamco mollit enim excepteur ea.
        </p>
      </div>
      <footer
        className="slds-modal__footer slds-hide"
      />
    </div>
  </section>,
  <div
    className="slds-backdrop slds-backdrop_open"
  />,
]
`;

exports[`Modal renders a model that is headless 1`] = `
Array [
  <section
    aria-describedby="modal-content-id-1"
    aria-label="Meaningful description of the modal content"
    aria-modal="true"
    className="slds-modal slds-fade-in-open"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <header
        className="slds-modal__header slds-modal__header_empty"
      >
        <button
          className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
          onClick={[Function]}
          title="Close"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon slds-button__icon_large"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close
          </span>
        </button>
      </header>
      <div
        className="slds-modal__content slds-p-around_medium"
        id="modal-content-id-1"
      >
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi. Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis. Cillum sunt ad dolore quis aute consequat ipsum magna exercitation reprehenderit magna. Tempor cupidatat consequat elit dolor adipisicing.
        </p>
        <p>
          Dolor eiusmod sunt ex incididunt cillum quis nostrud velit duis sit officia. Lorem aliqua enim laboris do dolor eiusmod officia. Mollit incididunt nisi consectetur esse laborum eiusmod pariatur proident. Eiusmod et adipisicing culpa deserunt nostrud ad veniam nulla aute est. Labore esse esse cupidatat amet velit id elit consequat minim ullamco mollit enim excepteur ea.
        </p>
      </div>
      <footer
        className="slds-modal__footer"
      >
        <button
          className="slds-button slds-button_neutral"
        >
          Cancel
        </button>
        <button
          className="slds-button slds-button_brand"
        >
          Save
        </button>
      </footer>
    </div>
  </section>,
  <div
    className="slds-backdrop slds-backdrop_open"
  />,
]
`;

exports[`Modal renders a model that is large 1`] = `
Array [
  <section
    aria-describedby="modal-content-id-1"
    aria-labelledby="modal-heading-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open slds-modal_large"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <header
        className="slds-modal__header"
      >
        <button
          className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
          onClick={[Function]}
          title="Close"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon slds-button__icon_large"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close
          </span>
        </button>
        <h2
          className="slds-modal__title slds-hyphenate"
          id="modal-heading-01"
        >
          Modal header
        </h2>
      </header>
      <div
        className="slds-modal__content slds-p-around_medium"
        id="modal-content-id-1"
      >
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi. Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis. Cillum sunt ad dolore quis aute consequat ipsum magna exercitation reprehenderit magna. Tempor cupidatat consequat elit dolor adipisicing.
        </p>
        <p>
          Dolor eiusmod sunt ex incididunt cillum quis nostrud velit duis sit officia. Lorem aliqua enim laboris do dolor eiusmod officia. Mollit incididunt nisi consectetur esse laborum eiusmod pariatur proident. Eiusmod et adipisicing culpa deserunt nostrud ad veniam nulla aute est. Labore esse esse cupidatat amet velit id elit consequat minim ullamco mollit enim excepteur ea.
        </p>
      </div>
      <footer
        className="slds-modal__footer"
      >
        <button
          className="slds-button slds-button_neutral"
        >
          Cancel
        </button>
        <button
          className="slds-button slds-button_brand"
        >
          Save
        </button>
      </footer>
    </div>
  </section>,
  <div
    className="slds-backdrop slds-backdrop_open"
  />,
]
`;

exports[`Modal renders a model that is medium 1`] = `
Array [
  <section
    aria-describedby="modal-content-id-1"
    aria-labelledby="modal-heading-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open slds-modal_medium"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <header
        className="slds-modal__header"
      >
        <button
          className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
          onClick={[Function]}
          title="Close"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon slds-button__icon_large"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close
          </span>
        </button>
        <h2
          className="slds-modal__title slds-hyphenate"
          id="modal-heading-01"
        >
          Modal header
        </h2>
      </header>
      <div
        className="slds-modal__content slds-p-around_medium"
        id="modal-content-id-1"
      >
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi. Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis. Cillum sunt ad dolore quis aute consequat ipsum magna exercitation reprehenderit magna. Tempor cupidatat consequat elit dolor adipisicing.
        </p>
        <p>
          Dolor eiusmod sunt ex incididunt cillum quis nostrud velit duis sit officia. Lorem aliqua enim laboris do dolor eiusmod officia. Mollit incididunt nisi consectetur esse laborum eiusmod pariatur proident. Eiusmod et adipisicing culpa deserunt nostrud ad veniam nulla aute est. Labore esse esse cupidatat amet velit id elit consequat minim ullamco mollit enim excepteur ea.
        </p>
      </div>
      <footer
        className="slds-modal__footer"
      >
        <button
          className="slds-button slds-button_neutral"
        >
          Cancel
        </button>
        <button
          className="slds-button slds-button_brand"
        >
          Save
        </button>
      </footer>
    </div>
  </section>,
  <div
    className="slds-backdrop slds-backdrop_open"
  />,
]
`;

exports[`Modal renders a model that is small 1`] = `
Array [
  <section
    aria-describedby="modal-content-id-1"
    aria-labelledby="modal-heading-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open slds-modal_small"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <header
        className="slds-modal__header"
      >
        <button
          className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
          onClick={[Function]}
          title="Close"
        >
          <svg
            aria-hidden={true}
            className="slds-button__icon slds-button__icon_large"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close
          </span>
        </button>
        <h2
          className="slds-modal__title slds-hyphenate"
          id="modal-heading-01"
        >
          Modal header
        </h2>
      </header>
      <div
        className="slds-modal__content slds-p-around_medium"
        id="modal-content-id-1"
      >
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi. Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis. Cillum sunt ad dolore quis aute consequat ipsum magna exercitation reprehenderit magna. Tempor cupidatat consequat elit dolor adipisicing.
        </p>
        <p>
          Dolor eiusmod sunt ex incididunt cillum quis nostrud velit duis sit officia. Lorem aliqua enim laboris do dolor eiusmod officia. Mollit incididunt nisi consectetur esse laborum eiusmod pariatur proident. Eiusmod et adipisicing culpa deserunt nostrud ad veniam nulla aute est. Labore esse esse cupidatat amet velit id elit consequat minim ullamco mollit enim excepteur ea.
        </p>
      </div>
      <footer
        className="slds-modal__footer"
      >
        <button
          className="slds-button slds-button_neutral"
        >
          Cancel
        </button>
        <button
          className="slds-button slds-button_brand"
        >
          Save
        </button>
      </footer>
    </div>
  </section>,
  <div
    className="slds-backdrop slds-backdrop_open"
  />,
]
`;
